<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_base"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/timg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/include_title_layout" />

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.sunanang.sunwallpaper.opengles.GLESPlaneAnimatedSurfaceView
                    android:id="@+id/surfaceView"
                    android:layout_width="190dp"
                    android:layout_height="310dp"/>

                <com.sunanang.sunwallpaper.view.CustomRadioGroup
                    android:paddingLeft="10dp"
                    android:id="@+id/motionGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:checkedButton="@+id/straight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/surfaceView"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/straight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_radio_button_spec"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/straight"
                        android:textColor="@color/selector_radio_button_spec"/>

                    <RadioButton
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/eight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_radio_button_spec"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/eight"
                        android:textColor="@color/selector_radio_button_spec"/>

                    <RadioButton
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_radio_button_spec"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/rand"
                        android:textColor="@color/selector_radio_button_spec"/>
                </com.sunanang.sunwallpaper.view.CustomRadioGroup>

            </LinearLayout>
            <View
                android:layout_marginBottom="4.0dip"
                android:layout_marginTop="4.0dip"
                android:background="@color/common_setting_line"
                android:layout_width="fill_parent"
                android:layout_height="1.0px" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/colorDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:alpha="20"
                    android:backgroundTint="@null"
                    android:popupBackground="@null"
                    android:spinnerMode="dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"/>
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/dropdownimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="80"
                    android:background="@color/colorPrimaryDark"
                    android:contentDescription="@string/colordropdown"
                    android:scaleType="centerCrop" />
            </FrameLayout>


            <View
                android:layout_marginBottom="4.0dip"
                android:layout_marginTop="4.0dip"
                android:background="@color/common_setting_line"
                android:layout_width="fill_parent"
                android:layout_height="1.0px" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/animSpeed"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorDropdown" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/animationSpeedSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8.0dip"
                android:paddingRight="12.0dip"
                app:isb_indicator_color="@color/color_blue"
                app:isb_indicator_type="circular_bubble"
                app:isb_max="100"
                app:isb_min="0"
                app:isb_progress="50"
                app:isb_show_indicator="true"
                app:isb_text_color="@color/color_blue"
                app:isb_thumb_color="@color/color_blue"
                app:isb_track_background_bar_color="@color/white_99"
                app:isb_track_progress_bar_color="@color/color_blue"
                app:isb_track_progress_bar_size="4dp"
                app:isb_track_rounded_corners="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <View
                android:layout_marginBottom="4.0dip"
                android:layout_marginTop="4.0dip"
                android:background="@color/common_setting_line"
                android:layout_width="fill_parent"
                android:layout_height="1.0px" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/parallaxToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/parallax"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />
            <View
                android:background="@color/common_setting_line"
                android:layout_width="fill_parent"
                android:layout_height="1.0px" />

            <TextView
                android:id="@+id/buttonSetWallpaper"
                android:background="@drawable/selector_btn_setting_back"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="10dp"
                android:shadowDy="100"
                android:shadowRadius="10"
                android:text="@string/set"
                android:clickable="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>